adding mcp server and mcp client

--- a/flight-mcp-server/src/main/resources/application.properties
+++ b/flight-mcp-server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8084
 # MCP Server Configuration
 spring.ai.mcp.server.name=mcp-flight-server
 spring.ai.mcp.server.version=1.0.0
+
+# Flight App URL
+rest.baseUrl=http://localhost:8081
