--- a/flight-mcp-client/build.gradle
+++ b/flight-mcp-client/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
 }
+ext {
+    set('springAiVersion', "1.0.0")
+}
 
 group = 'eduzs.dev'
 version = '0.0.1-SNAPSHOT'
@@ -24,6 +27,13 @@ dependencies {
 //	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
     implementation 'org.springframework.ai:spring-ai-starter-model-openai'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+    }
 }
 
 tasks.named('test') {
